<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingBottom="@dimen/activity_vertical_margin">

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:paddingBottom="@dimen/activity_vertical_margin"
		android:text="@string/main_title"
		android:textAppearance="?android:attr/textAppearanceLarge" />

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:paddingBottom="@dimen/activity_vertical_margin"
		android:text="@string/main_welcomeText"
		android:textAppearance="?android:attr/textAppearanceMedium" />

	<Button
		android:id="@+id/main_button_logActivity"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/main_buttontext_logActivity" />

	<Button
		android:id="@+id/main_button_questionActivity"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/main_buttontext_questionActivity" />

	<Button
		android:id="@+id/main_button_startBrowser"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:paddingBottom="@dimen/activity_horizontal_margin"
		android:text="@string/main_buttontext_startBrowser" />

	<TextView
		android:id="@+id/main_textView_result"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:paddingTop="@dimen/activity_horizontal_margin"
		android:text=""
		android:textAppearance="?android:attr/textAppearanceSmall" />

</LinearLayout>
